# crypto_trader

./: pyproject.toml  requirements.txt
crypto_trader/: bithumb.py  crypto_trader.py
crypto_trader/config/: config.py  parameters.yaml
crypto_trader/data_retrieval/: binance_data_downloader.py
crypto_trader/examples/: many_exchanges_many_different_streams.py  many_exchanges_many_order_books_synchronized.py  many_exchanges_many_order_books_throttled.py  rest_websocket_combination.py  test_sql.py  watch_all_symbols.py  watch_many_order_books.py  websocket_example.py
crypto_trader/exchange/: __init__.py  bithumb.py  coinone.py  gateio.py  kucoin.py  upbit.py
